Navbar structure almost complete. Need to fix styles and add light/dark mode functionality

--- a/src/app/components/nav-bar/nav-bar.component.css
+++ b/src/app/components/nav-bar/nav-bar.component.css
@@ -1,8 +1,9 @@
-div.container-fluid {
+div.navbar {
   display: flex;
+  width: 100%;
   align-items: center;
-  /* max-height: 10vh; */
-  background: #2a2a2a;
+  /* background: #2a2a2a; */
+  height: 85px;
 }
 ul {
   position: relative;
@@ -22,7 +23,7 @@ ul li:before {
   left: -5px;
   width: 100%;
   height: 10px;
-  background: #2a2a2a;
+  /* background: #2a2a2a; */
   transform-origin: top;
   transform: skewX(-41deg);
 }
@@ -33,7 +34,7 @@ ul li:after {
   left: -9px;
   width: 9px;
   height: 100%;
-  background: #2a2a2a;
+  /* background: #2a2a2a; */
   transform-origin: right;
   transform: skewY(-49deg);
 }
@@ -44,10 +45,10 @@ ul li span {
   width: 100%;
   height: 100%;
   display: flex !important;
-  background: #2a2a2a;
+  /* background: #2a2a2a; */
   justify-content: center;
   align-items: center;
-  color: #fff;
+  color: #000000;
   font-size: 30px !important;
   transition: 1.5s ease-out;
 }
@@ -57,14 +58,6 @@ ul li:hover span {
   color: #fff;
   box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.5);
 }
-/* ul li:hover span:nth-child(5) {
-  transform: translate(20px, -20px);
-  opacity: 1;
-}
-ul li:hover span:nth-child(4) {
-  transform: translate(30px, -30px);
-  opacity: 0.8;
-} */
 ul li:hover span:nth-child(3) {
   transform: translate(20px, -20px);
   opacity: 1;
